--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                 <li><a href="#about" class="nav-link">소개</a></li>
                 <li><a href="#skills" class="nav-link">기술</a></li>
                 <li><a href="#projects" class="nav-link">프로젝트</a></li>
-                <li><a href="#contact" class="nav-link">연락</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -503,9 +503,9 @@
                         </defs>
                     </svg>
                 </div>
-                <h1>AI Developer</h1>
+                <h1>AI Developer 엄태홍</h1>
                 <div class="typing-text" id="typing-text"></div>
-                <a href="#about" class="cta-button">더 알아보기</a>
+                <a href="#about" class="cta-button">프로젝트 보기</a>
             </div>
         </div>
     </section>
@@ -519,14 +519,14 @@
                     🤖
                 </div>
                 <div class="about-text">
-                    <h3 style="color: var(--neon-blue); margin-bottom: 1rem;">안녕하세요! AI 개발자입니다.</h3>
+                    <h3 style="color: var(--neon-blue); margin-bottom: 1rem;">안녕하세요! AI 개발자 엄태홍입니다.</h3>
                     <p>인공지능과 머신러닝 기술을 활용하여 혁신적인 솔루션을 개발하는 것에 열정을 가지고 있습니다. 
                     딥러닝, 자연어처리, 컴퓨터 비전 등 다양한 AI 분야에서 경험을 쌓아왔으며, 
                     최신 기술 트렌드를 빠르게 습득하고 실무에 적용하는 것을 즐깁니다.</p>
                     <br>
                     <p>데이터 사이언스부터 프로덕션 레벨의 AI 시스템 구축까지, 
                     전체 AI 개발 라이프사이클에 대한 깊은 이해를 바탕으로 
-                    비즈니스 가치를 창출하는 AI 솔루션을 만들어갑니다.</p>
+                    비즈니스 가치를 창출하는 AI 솔루션을 만듭다.</p>
                 </div>
             </div>
         </div>
@@ -684,7 +684,7 @@
                 <a href="#" title="Twitter">🐦</a>
                 <a href="#" title="Blog">📝</a>
             </div>
-            <p>&copy; 2024 AI Developer Portfolio. All rights reserved.</p>
+            <p>&copy; 2025 AI Developer taehong-Eom Portfolio. All rights reserved.</p>
         </div>
     </footer>
 
