--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                     <br>
                     <p>데이터 사이언스부터 프로덕션 레벨의 AI 시스템 구축까지, 
                     전체 AI 개발 라이프사이클에 대한 깊은 이해를 바탕으로 
-                    비즈니스 가치를 창출하는 AI 솔루션을 만듭다.</p>
+                    비즈니스 가치를 창출하는 AI 솔루션을 만듭니다.</p>
                 </div>
             </div>
         </div>
