--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             <h2 class="section-title">소개</h2>
             <div class="about-content">
                 <div class="about-image">
-                    🤖
+                    <img src="assets/human.jpg" alt="Profile Image">
                 </div>
                 <div class="about-text">
                     <h3 style="color: var(--neon-blue); margin-bottom: 1rem;">안녕하세요! AI 개발자 엄태홍입니다.</h3>
