--- a/index.html
+++ b/index.html
@@ -606,7 +606,9 @@
             <h2 class="section-title">프로젝트</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-image">🤖</div>
+                    <div class="project-image">
+                        <img src="assets/ai_chatbot_system.png" alt="ai chatbot system">
+                    </div>
                     <div class="project-content">
                         <h3 class="project-title">AI 챗봇 시스템</h3>
                         <p>자연어처리 기술을 활용한 고도화된 대화형 AI 챗봇을 개발했습니다. 
@@ -621,7 +623,9 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-image">👁️</div>
+                    <div class="project-image">
+                        <img src="assets/cv_image_analysis.png" alt="cv image analysis">
+                    </div>
                     <div class="project-content">
                         <h3 class="project-title">컴퓨터 비전 분석 도구</h3>
                         <p>실시간 객체 탐지 및 분류가 가능한 컴퓨터 비전 시스템을 구축했습니다. 
@@ -636,7 +640,9 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-image">📊</div>
+                    <div class="project-image">
+                        <img src="assets/recommend_system.png" alt="recommend system">
+                    </div>
                     <div class="project-content">
                         <h3 class="project-title">추천 시스템</h3>
                         <p>사용자 행동 패턴을 분석하여 개인화된 추천을 제공하는 머신러닝 시스템을 개발했습니다. 
@@ -656,7 +662,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
-            <h2 class="section-title">연락하기</h2>
+            <h2 class="section-title">Contact</h2>
             <div class="contact-content">
                 <p>AI 프로젝트나 협업에 관심이 있으시다면 언제든 연락주세요!</p>
                 <form class="contact-form">
