--- a/index.html
+++ b/index.html
@@ -309,13 +309,14 @@
 
         .project-image {
             width: 100%;
-            height: 200px;
+            height: 100px;
             background: var(--gradient-primary);
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 3rem;
             color: white;
+            object-fit: cover;
         }
 
         .project-content {
