--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
 
         .project-content {
             padding: 1.5rem;
+            background: black;
         }
 
         .project-title {
