--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
         .project-content {
             padding: 1.5rem;
-            background: black;
+            background-color: black;
         }
 
         .project-title {
