--- a/index.html
+++ b/index.html
@@ -309,17 +309,18 @@
 
         .project-image {
             width: 100%;
-            height: 300px;
+            height: 50px;
             background: var(--gradient-primary);
             align-items: center;
             justify-content: center;
             font-size: 3rem;
-            color: white;
+            color: black;
             object-fit: cover;
         }
 
         .project-content {
             padding: 1.5rem;
+            color: black;
             background-color: black;
         }
 
