--- a/index.html
+++ b/index.html
@@ -309,18 +309,19 @@
 
         .project-image {
             width: 100%;
-            height: 50px;
+            height: 300px;
             background: var(--gradient-primary);
             align-items: center;
+            display: flex;
             justify-content: center;
             font-size: 3rem;
             color: black;
             object-fit: cover;
+            overflow: hidden;
         }
 
         .project-content {
             padding: 1.5rem;
-            color: black;
             background-color: black;
         }
 
